--- a/_posts/2017-03-10-Quartz的学习和使用.md
+++ b/_posts/2017-03-10-Quartz的学习和使用.md
@@ -1,4 +1,8 @@
 > http://wenku.baidu.com/link?url=ggiylDIpc9cSx5ygIMLCAIrXwdlu5-xMBFjmzvrjWsAikIQSMBononSzqIoaJH6yN2hQ332621Zs713U5-YkL3sUjCu1bR-41X7caiIBS_C  
+>
+> 1. http://www.quartz-scheduler.org/documentation/quartz-2.2.x/tutorials/
+> 2. https://nkcoder.github.io/tags/quartz/page/2/
+> 3. http://blog.csdn.net/evankaka/article/category/3155529
 
 
 
@@ -6,7 +10,11 @@
 
 
 
-## 初始化数据库
+# Quartz 存储与持久化
+
+Quartz 提供两种基本作业存储类型。第一种类型叫做 RAMJobStore，第二种类型叫做 JDBC 作业存储。在默认情况下 Quartz 将任务调度的运行信息保存在内存中，这种方法提供了最佳的性能，因为内存中数据访问最快。不足之处是缺乏数据的持久性，当程序路途停止或系统崩溃时，所有运行的信息都会丢失。
+
+#### 持久化 Quartz 
 
 > 运行下面的（mysql）数据库脚本，创建数据库表（先参照 quartz.properties 文件中 `org.quartz.dataSource.myDS.URL`属性配置的数据库名称创建数据库，这里我的数据库名称即为 quartz_scheduler）
 >
@@ -537,7 +545,9 @@ public class JdbcJobCreateController {
 
 
 
-## 数据库表的结构
+## Quartz 持久化数据库结构
+
+> 参照：http://blog.csdn.net/evankaka/article/details/45540885
 
 
 
