--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -1,8 +1,19 @@
-> http://wenku.baidu.com/link?url=ggiylDIpc9cSx5ygIMLCAIrXwdlu5-xMBFjmzvrjWsAikIQSMBononSzqIoaJH6yN2hQ332621Zs713U5-YkL3sUjCu1bR-41X7caiIBS_C  
+---
+layout: post
+title: Quartz 的学习和使用
+category : JavaEE
+tagline: "Supporting tagline"
+tags : [Quartz]
+---
+{% include JB/setup %}
+# Quartz 的学习和使用
+---
+
+> http://wenku.baidu.com/link?url=ggiylDIpc9cSx5ygIMLCAIrXwdlu5-xMBFjmzvrjWsAikIQSMBononSzqIoaJH6yN2hQ332621Zs713U5-YkL3sUjCu1bR-41X7caiIBS_C
 
 
 
-> 分布式 quartz 的配置与 Spring 的集成使用。
+# 分布式 Quartz 的配置与 Spring 的集成使用。
 
 
 
