--- a/_posts/2017-03-22-RabbitMQ的学习和使用.md
+++ b/_posts/2017-03-22-RabbitMQ的学习和使用.md
@@ -1,4 +1,13 @@
-
+---
+layout: post
+title: RabbitMQ 的学习和使用
+category : JavaEE
+tagline: "Supporting tagline"
+tags : [RabbitMQ]
+---
+{% include JB/setup %}
+# RabbitMQ 的学习和使用
+---
 
 > [Understanding AMQP](https://spring.io/understanding/AMQP)
 
