--- a/_posts/2017-03-22-RabbitMQ的学习和使用.md
+++ b/_posts/2017-03-22-RabbitMQ的学习和使用.md
@@ -9,10 +9,6 @@ tags : [RabbitMQ]
 # RabbitMQ 的学习和使用
 ---
 
-> [Understanding AMQP](https://spring.io/understanding/AMQP)
-
-
-
 ## Set up RabbitMQ broker
 
 Before you can build your messaging application, you need to set up the server that will handle receiving and sending messages.
@@ -103,7 +99,9 @@ http://www.myexception.cn/database/1350084.html
 
 
 
+# Spring AMQP
 
+> [Understanding AMQP](https://spring.io/understanding/AMQP)
 
 > [Spring AMQP](http://docs.spring.io/spring-amqp/reference/html/index.html)
 
