--- a/_posts/2017-01-02-JavaEE基础学习.md
+++ b/_posts/2017-01-02-JavaEE基础学习.md
@@ -1,10 +1,199 @@
 ---
 layout: post
-title: JavaEE 基础学习
+title: Java 编程语言学习
 category : JavaEE
 tagline: "Supporting tagline"
-tags : [Java]
+tags : [Java 基础]
 ---
 {% include JB/setup %}
-# JavaEE 基础学习
+# Java 编程语言学习
 ---
+
+> https://docs.oracle.com/javase/8/
+
+https://docs.oracle.com/javase/8/docs/
+
+https://docs.oracle.com/javase/8/docs/api/
+
+
+
+封装
+
+
+
+
+
+继承
+
+
+
+
+
+多态
+
+
+
+
+
+内部类
+
+创建内部类的典型的方式是在一个方法体的里面创建，局部内部类不能有访问说明符，因为它不是外部类的一部分，但是它可以访问当前代码块内的常量, 以及此外部类的所有成员。使用内部类的优点是内部类可以随意使用外部类的成员变量（包括私有）而不用生成外部类的对象。
+
+http://blog.csdn.net/cws1214/article/details/52055980
+
+http://lvwenwen.iteye.com/blog/1906683
+
+
+
+
+
+枚举
+
+
+
+
+
+反射
+
+
+
+
+
+
+
+
+
+instanceof
+
+> instanceof关键字用于判断一个引用类型变量所指向的对象是否是一个类（或接口、抽象类、父类）的实例。
+
+
+
+
+
+
+
+正则表达式
+
+> http://baike.xsoftlab.net/view/207.html
+
+Java 常用正则表达式：
+
+
+
+
+
+
+
+线程
+
+
+
+
+
+FAQ：
+
+什么是线程同步?
+
+当使用多个线程来访问同一个数据时，非常容易出现线程安全问题 (比如多个线程都在操作同一数据导致数据不一致), 所以我们用同步机制来解决这些问题。
+
+实现同步机制有两个方法：
+
+1.同步代码块：
+
+synchronized(同一个数据){} 同一个数据：就是 N 条线程同时访问一个数据。
+
+2.同步方法：
+
+public synchronized 数据返回类型 方法名 (){}
+
+就是使用 synchronized 来修饰某个方法，则该方法称为同步方法。对于同步方法而言，无需显示指定同步监视器，同步方法的同步监视器是 this 也就是该对象的本身（这里指的对象本身有点含糊，其实就是调用该同步方法的对象）通过使用同步方法，可非常方便的将某类变成线程安全的类，具有如下特征：
+
+1，该类的对象可以被多个线程安全的访问。
+
+2，每个线程调用该对象的任意方法之后，都将得到正确的结果。
+
+3，每个线程调用该对象的任意方法之后，该对象状态依然保持合理状态。
+
+注：synchronized 关键字可以修饰方法，也可以修饰代码块，但不能修饰构造器，属性等。
+
+实现同步机制注意以下几点： 安全性高，性能低，在多线程用。性能高，安全性低，在单线程用。
+
+1，不要对线程安全类的所有方法都进行同步，只对那些会改变共享资源方法的进行同步。
+
+2，如果可变类有两种运行环境，当线程环境和多线程环境则应该为该可变类提供两种版本：线程安全版本和线程不安全版本 (没有同步方法和同步块)。在单线程中环境中，使用线程不安全版本以保证性能，在多线程中使用线程安全版本.
+
+线程通讯：
+
+为什么要使用线程通讯?
+
+当使用 synchronized 来修饰某个共享资源时 (分同步代码块和同步方法两种情况）, 当某个线程获得共享资源的锁后就可以执行相应的代码段，直到该线程运行完该代码段后才释放对该 共享资源的锁，让其他线程有机会执行对该共享资源的修改。当某个线程占有某个共享资源的锁时，如果另外一个线程也想获得这把锁运行就需要使用 wait() 和 notify()/notifyAll() 方法来进行线程通讯了。
+
+Java.lang.object 里的三个方法 wait() notify() notifyAll()
+
+wait 方法导致当前线程等待，直到其他线程调用同步监视器的 notify 方法或 notifyAll 方法来唤醒该线程。
+
+wait(mills) 方法
+
+都是等待指定时间后自动苏醒，调用 wait 方法的当前线程会释放该同步监视器的锁定，可以不用 notify 或 notifyAll 方法把它唤醒。
+
+notify()
+
+唤醒在同步监视器上等待的单个线程，如果所有线程都在同步监视器上等待，则会选择唤醒其中一个线程，选择是任意性的，只有当前线程放弃对该同步监视器的锁定后，也就是使用 wait 方法后，才可以执行被唤醒的线程。
+
+notifyAll() 方法
+
+唤醒在同步监视器上等待的所有的线程。只用当前线程放弃对该同步监视器的锁定后，才可以执行被唤醒的线程。
+
+
+
+
+
+
+
+集合
+
+
+
+集合遍历时，如果要删除元素，唯一正确的方法时先将集合转换成迭代器，再使用iterator.remove() 方法，如：
+
+```
+    Iterator<Integer> it = list.iterator();
+    while (it.hasNext()) {
+        it.remove();
+    }
+```
+
+Java 不允许集合遍历时删除元素，因为集合遍历底层是使用 Iterator,Iterator 是工作在一个独立的线程中，并且拥有一个互斥锁。Iterator 被创建之后会建立一个指向原来对象的单链索引表，当原来的对象数量发生变化时，这个索引表的内容不会同步改变，所以当索引指针往后移动的时候就找不到要迭代的对象，所以按照 fail-fast 原则 Iterator 会马上抛出 java.util.ConcurrentModificationException 异常。所以 Iterator 在工作的时候是不允许被迭代的对象被改变的。
+
+> [关于 List 比较好玩的操作](http://blog.csdn.net/ghsau/article/details/9347357)
+
+
+
+HashMap
+
+对于 HashMap 而言，系统 key-value 当成一个Entry对象进行处理。它采用 Hash 算法来决定集合中元素的存储位置。当系统开始初始化 HashMap 时，系统会创建一个长度为 capacity 的 Entry 数组，这个数组里可以存储元素的位置被称为 “桶（bucket）”，每个 bucket 都有其指定索引，系统可以根据其索引快速访问该 bucket 里存储的元素。
+
+无论何时，HashMap 的每个 “桶” 只存储一个元素（也就是一个 Entry），由于 Entry 对象可以包含一个引用变量（就是 Entry 构造器的的最后一个参数）用于指向下一个 Entry，因此可能出现的情况是：HashMap 的 bucket 中只有一个 Entry，但这个 Entry 指向另一个 Entry ——这就形成了一个 Entry 链。
+
+当程序试图将一个 key-value 对放入 HashMap 中时，程序首先根据该 key 的 hashCode() 返回值决定该 Entry 的存储位置：如果两个 Entry 的 key 的 hashCode() 返回值相同，那它们的存储位置相同。如果这两个 Entry 的 key 通过 equals 比较返回 true，新添加 Entry 的 value 将覆盖集合中原有 Entry 的 value，但 key 不会覆盖。如果这两个 Entry 的 key 通过 equals 比较返回 false，新添加的 Entry 将与集合中原有 Entry 形成 Entry 链，而且新添加的 Entry 位于 Entry 链的头部。
+
+
+
+HashSet
+
+对于 HashSet 而言，它是基于 HashMap 实现的。它只是封装了一个 HashMap 对象来存储所有的集合元素，所有放入 HashSet 中的集合元素实际上由 HashMap 的 key 来保存，而 HashMap 的 value 则存储了一个 PRESENT，它是一个静态的 Object 对象。
+
+HashSet 的绝大部分方法都是通过调用 HashMap 的方法来实现的，因此 HashSet 和 HashMap 两个集合在实现本质上是相同的。
+
+所以 HashSet 在查找元素时需要调用到其集合元素的 hashcode() 和 equals() 方法。
+
+
+
+> HashMap 与 HashSet 摘自：https://www.ibm.com/developerworks/cn/java/j-lo-hash/index.html
+
+
+
+
+
+
