--- a/_posts/2017-03-05-RabbitMQ的学习和使用.md
+++ b/_posts/2017-03-05-RabbitMQ的学习和使用.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: RabbitMQ 的学习和使用
-category : JavaEE
+category : [JavaEE]
 tagline: "Supporting tagline"
 tags : [RabbitMQ]
 ---
@@ -12,6 +12,7 @@ tags : [RabbitMQ]
 > [RabbitMQ 官网](https://www.rabbitmq.com/)
 
 [RabbitMQ 消息队列（一）: Detailed Introduction 详细介绍](http://blog.csdn.net/anzhsoft/article/details/19563091?utm_source=tuicool&utm_medium=referral)
+
 
 ## Set up RabbitMQ broker
 
