--- a/_posts/2017-01-02-JavaEE基础学习.md
+++ b/_posts/2017-01-02-JavaEE基础学习.md
@@ -17,25 +17,31 @@ https://docs.oracle.com/javase/8/docs/api/
 
 
 
-封装
+## 封装
 
 
 
 
 
-继承
+## 继承
 
 
 
 
 
-多态
+## 多态
 
 
+## 类
 
 
+## 抽象类
 
-内部类
+
+## 接口
+
+
+## 内部类
 
 创建内部类的典型的方式是在一个方法体的里面创建，局部内部类不能有访问说明符，因为它不是外部类的一部分，但是它可以访问当前代码块内的常量, 以及此外部类的所有成员。使用内部类的优点是内部类可以随意使用外部类的成员变量（包括私有）而不用生成外部类的对象。
 
@@ -47,13 +53,15 @@ http://lvwenwen.iteye.com/blog/1906683
 
 
 
-枚举
+
+
+## 枚举
 
 
 
 
 
-反射
+## 反射
 
 
 
@@ -63,7 +71,7 @@ http://lvwenwen.iteye.com/blog/1906683
 
 
 
-instanceof
+## instanceof
 
 > instanceof关键字用于判断一个引用类型变量所指向的对象是否是一个类（或接口、抽象类、父类）的实例。
 
@@ -73,7 +81,7 @@ instanceof
 
 
 
-正则表达式
+## 正则表达式
 
 > http://baike.xsoftlab.net/view/207.html
 
@@ -85,7 +93,7 @@ Java 常用正则表达式：
 
 
 
-线程
+## 线程
 
 
 
@@ -151,7 +159,7 @@ notifyAll() 方法
 
 
 
-集合
+## 集合
 
 
 
@@ -170,7 +178,7 @@ Java 不允许集合遍历时删除元素，因为集合遍历底层是使用 It
 
 
 
-HashMap
+### HashMap
 
 对于 HashMap 而言，系统 key-value 当成一个Entry对象进行处理。它采用 Hash 算法来决定集合中元素的存储位置。当系统开始初始化 HashMap 时，系统会创建一个长度为 capacity 的 Entry 数组，这个数组里可以存储元素的位置被称为 “桶（bucket）”，每个 bucket 都有其指定索引，系统可以根据其索引快速访问该 bucket 里存储的元素。
 
@@ -180,7 +188,7 @@ HashMap
 
 
 
-HashSet
+### HashSet
 
 对于 HashSet 而言，它是基于 HashMap 实现的。它只是封装了一个 HashMap 对象来存储所有的集合元素，所有放入 HashSet 中的集合元素实际上由 HashMap 的 key 来保存，而 HashMap 的 value 则存储了一个 PRESENT，它是一个静态的 Object 对象。
 
@@ -193,6 +201,7 @@ HashSet 的绝大部分方法都是通过调用 HashMap 的方法来实现的，
 > HashMap 与 HashSet 摘自：https://www.ibm.com/developerworks/cn/java/j-lo-hash/index.html
 
 
+## System Properties
 
 
 
