--- a/_posts/2017-01-02-JavaEE基础学习.md
+++ b/_posts/2017-01-02-JavaEE基础学习.md
@@ -203,6 +203,10 @@ HashSet 的绝大部分方法都是通过调用 HashMap 的方法来实现的，
 
 ## System Properties
 
+> https://docs.oracle.com/javase/tutorial/essential/environment/sysprop.html
 
+user.dir : User's current working directory （用户当前的 工作目录/工程目录）
+
+> https://stackoverflow.com/questions/16239130/java-user-dir-property-what-exactly-does-it-mean
 
 
