--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -21,7 +21,7 @@ tags : [Quartz]
 
 > 运行下面的（mysql）数据库脚本，创建数据库表（先参照 quartz.properties 文件中 `org.quartz.dataSource.myDS.URL`属性配置的数据库名称创建数据库，这里我的数据库名称即为 quartz_scheduler）
 >
-> 其他数据库脚本见：fjwoejfowfwof
+> 其他数据库脚本见官网源代码（http://www.quartz-scheduler.org/downloads/）中 quartz-xxx-distribution\quartz-xxx\docs\dbTables 文件夹。
 
 mysql.sql
 
@@ -268,7 +268,7 @@ org.quartz.dataSource.myDS.validationQuery: select 0
 #org.quartz.plugin.triggHistory.class: org.quartz.plugins.history.LoggingJobHistoryPlugin
 ```
 
-## 依赖
+## 主要依赖
 
 Maven：
 
@@ -288,7 +288,7 @@ compile("org.quartz-scheduler:quartz:2.2.3")
 
 
 
-## Server 端
+## Server 端示例代码
 
 #### SchedulerJob.java
 
@@ -307,14 +307,17 @@ public class SchedulerJob implements Job {
 
     JobDataMap jobDataMap;
 
+    public void log() {}
+
     @Override
     public void execute(JobExecutionContext jobExecutionContext) throws JobExecutionException {
-        
+        System.out.println(this.identify + "--------" + this.group);
+        log();
     }
 }
 ```
 
-每个Job实例都继承SchedulerJob
+让每个Job实例都继承SchedulerJob
 
 #### Jdbc.java
 
@@ -334,11 +337,11 @@ public class Jdbc extends SchedulerJob {
     public String sql;
 
     @Override
-    public void execute(JobExecutionContext jobExecutionContext) throws JobExecutionException {
+    public void log() {
         JdbcUtils jdbcUtils = new JdbcUtils(url, username, password, driverClassName);
         Map<String, Object> results = jdbcUtils.getJdbcTemplate().queryForMap(sql);
         for (Map.Entry e : results.entrySet()) {
-            System.out.println("quartz -------------- " + e.getKey() + " : " + e.getValue() + "--------------");
+            System.out.println(e.getKey() + " -------------- : " + e.getValue());
         }
         jdbcUtils.close();
     }
@@ -443,15 +446,10 @@ public class SchedulerCreateController {
 }
 ```
 
+#### 对Job实例的其他操作
+略
 
-
-
-
-#### 对Job的增删改查操作
-
-
-
-## Client 端
+## Client 端示例代码
 
 #### SchedulerJob.java
 
@@ -504,7 +502,7 @@ public class RemoteSchedulerJobServiceImpl implements RemoteSchedulerJobService 
     @Autowired
     private RestTemplate restTemplate;
 
-	//spring.quartz.server = http://localhost:8081
+	//示例中配置的 spring.quartz.server = http://localhost:8081
     @Value("${spring.quartz.server}")
     private String remoteSchedulerServer;
 
@@ -530,7 +528,7 @@ public class JdbcJobCreateController {
         jdbcJob.setIdentify("jdbc" + new Random().nextInt());
         jdbcJob.setGroup("jdbcs");
         jdbcJob.setDescription("j...d...b...c");
-        jdbcJob.setCron("0 */1 * * * ?");
+        jdbcJob.setCron("0 */1 * * * ? *");
         JobDataMap jobDataMap = new JobDataMap();
         jobDataMap.put("url", "jdbc:mysql://localhost:3306/quartz_scheduler");
         jobDataMap.put("username", "root");
@@ -549,8 +547,7 @@ public class JdbcJobCreateController {
 
 
 ## 数据库表的结构
-
-
+参考：[Quartz 存储与持久化 - 基于 quartz.properties 的配置](http://blog.csdn.net/evankaka/article/details/45540885)
 
 ## FAQ
 
