--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -295,7 +295,7 @@ compile("org.quartz-scheduler:quartz:2.2.3")
 ```
 @Getter
 @Setter
-public class SchedulerJob implements Job {
+public abstract class SchedulerJob extends QuartzJobBean implements java.io.Serializable {
 
     String identify;
 
@@ -307,10 +307,10 @@ public class SchedulerJob implements Job {
 
     JobDataMap jobDataMap;
 
-    public void log() {}
+    public abstract void log();
 
     @Override
-    public void execute(JobExecutionContext jobExecutionContext) throws JobExecutionException {
+    protected void executeInternal(JobExecutionContext jobExecutionContext) throws JobExecutionException {
         System.out.println(this.identify + "--------" + this.group);
         log();
     }
@@ -379,9 +379,9 @@ public class WebConfig extends WebMvcConfigurerAdapter {
 
         @Override
         public Job newJob(TriggerFiredBundle bundle, Scheduler scheduler) throws SchedulerException {
-            Job job = super.newJob(bundle, scheduler);
-            autowireCapableBeanFactory.autowireBean(job);
-            return job;
+            Job jobInstance = super.newJob(bundle, scheduler);
+            autowireCapableBeanFactory.autowireBean(jobInstance);
+            return jobInstance;
         }
     }
 
@@ -407,7 +407,6 @@ public class SchedulerJobServiceImpl implements SchedulerJobService {
                 .withIdentity(job.getIdentify(), job.getGroup())
                 .withDescription(job.getDescription())
                 .withSchedule(CronScheduleBuilder.cronSchedule(job.getCron()))
-                .forJob(jobDetail)
                 .build();
         try {
             scheduler.scheduleJob(jobDetail, trigger);
@@ -439,7 +438,7 @@ public class SchedulerCreateController {
     private SchedulerJobService schedulerJobService;
 
     @RequestMapping(value = "/jdbc", method = RequestMethod.POST)
-    public ResponseEntity jdbc(@RequestBody SchedulerJob job) {
+    public ResponseEntity jdbc(@RequestBody Jdbc job) {
         schedulerJobService.addJob(job);
         return ResponseEntity.ok().build();
     }
@@ -502,7 +501,6 @@ public class RemoteSchedulerJobServiceImpl implements RemoteSchedulerJobService 
     @Autowired
     private RestTemplate restTemplate;
 
-	//示例中配置的 spring.quartz.server = http://localhost:8081
     @Value("${spring.quartz.server}")
     private String remoteSchedulerServer;
 
@@ -534,7 +532,7 @@ public class JdbcJobCreateController {
         jobDataMap.put("username", "root");
         jobDataMap.put("password", "");
         jobDataMap.put("driverClassName", "com.mysql.jdbc.Driver");
-        jobDataMap.put("sql", "select u from user");
+        jobDataMap.put("sql", "select job_name, job_group, description from qrtz_job_details limit 1");
         jdbcJob.setJobDataMap(jobDataMap);
         remoteSchedulerJobService.addJob(jdbcJob);
         return ResponseEntity.ok().build();
@@ -551,7 +549,7 @@ public class JdbcJobCreateController {
 
 ## FAQ
 
-1. 如果启动了远程 quartz ，那么本地如果同时启动了quartz且使用了远程quartz这个数据库，这时会出现quartz时间戳不统一的问题。（QRTZ_SCHEDULER_STATE 表）
+1. 如果启动了远程 quartz ，那么本地如果同时启动了 quartz 且使用了远程 quartz 这个数据库，这时会出现 quartz 时间戳不统一的问题。（QRTZ_SCHEDULER_STATE 表）
 
 2. org.quartz.JobPersistenceException: Couldn't acquire next trigger: Field 'SCHED_TIME' doesn't have a default value.
 
