--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -9,13 +9,9 @@ tags : [Quartz]
 # Quartz 的学习和使用
 ---
 
-> http://wenku.baidu.com/link?url=ggiylDIpc9cSx5ygIMLCAIrXwdlu5-xMBFjmzvrjWsAikIQSMBononSzqIoaJH6yN2hQ332621Zs713U5-YkL3sUjCu1bR-41X7caiIBS_C
-
-
-
 # 分布式 Quartz 的配置与 Spring 的集成使用。
 
-
+<!--break-->
 
 ## 初始化数据库
 
@@ -387,6 +383,7 @@ public class WebConfig extends WebMvcConfigurerAdapter {
 
 }
 ```
+> [Quartz 与 Spring 集成 Job 如何自动注入 Spring 容器托管的对象](http://wenku.baidu.com/link?url=ggiylDIpc9cSx5ygIMLCAIrXwdlu5-xMBFjmzvrjWsAikIQSMBononSzqIoaJH6yN2hQ332621Zs713U5-YkL3sUjCu1bR-41X7caiIBS_C)
 
 #### SchedulerJobServiceImpl.java
 
