--- a/_posts/2017-01-04-Java动态代理.md
+++ b/_posts/2017-01-04-Java动态代理.md
@@ -17,6 +17,8 @@ tags : [动态代理]
 
 延迟加载的核心思想是：如果当前并没有使用这个组件，则不需要真正地初始化它，使用一个代理对象替代它的原有位置，只要在真正需要使用的时候，才对它进行加载。
 
+<!--break-->
+
 代理模式的实现如下：
 
 假设有一个接口 IDBQuery，它只有一个 request() 方法：
