--- a/_posts/2017-03-05-RabbitMQ的学习和使用.md
+++ b/_posts/2017-03-05-RabbitMQ的学习和使用.md
@@ -11,6 +11,8 @@ tags : [RabbitMQ]
 
 > [RabbitMQ 官网](https://www.rabbitmq.com/)
 
+<!--break-->
+
 [RabbitMQ 消息队列（一）: Detailed Introduction 详细介绍](http://blog.csdn.net/anzhsoft/article/details/19563091?utm_source=tuicool&utm_medium=referral)
 
 
