--- a/_posts/2017-04-16-循环调用ajax请求.md
+++ b/_posts/2017-04-16-循环调用ajax请求.md
@@ -75,7 +75,9 @@ $(function () {
 
 另一种方法是使用匿名函数，如：
 
-> 参考：[解决 jQuery 循环调用 ajax，异步返回结果混乱](http://blog.csdn.net/yansong_8686/article/details/50382979)]
+> [解决 jQuery 循环调用 ajax，异步返回结果混乱](http://blog.csdn.net/yansong_8686/article/details/50382979)]
+> https://segmentfault.com/q/1010000000135703
+> [深入理解 JavaScript 系列（4）：立即调用的函数表达式](https://www.cnblogs.com/TomXu/archive/2011/12/31/2289423.html)
 
 ```
 for (var i = 1; i <= jdbcSize; i++) {
