--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -192,6 +192,7 @@ CREATE TABLE QRTZ_LOCKS
 commit;
 ```
 
+
 ## 配置 quartz.properties 文件
 
 > quartz.properties 文件位置
@@ -264,6 +265,7 @@ org.quartz.dataSource.myDS.validationQuery: select 0
 #org.quartz.plugin.triggHistory.class: org.quartz.plugins.history.LoggingJobHistoryPlugin
 ```
 
+
 ## 主要依赖
 
 Maven：
@@ -281,7 +283,6 @@ Gradle：
 ```
 compile("org.quartz-scheduler:quartz:2.2.3")
 ```
-
 
 
 ## Server 端示例代码
@@ -383,6 +384,7 @@ public class WebConfig extends WebMvcConfigurerAdapter {
 
 }
 ```
+
 > [Quartz 与 Spring 集成 Job 如何自动注入 Spring 容器托管的对象](http://wenku.baidu.com/link?url=ggiylDIpc9cSx5ygIMLCAIrXwdlu5-xMBFjmzvrjWsAikIQSMBononSzqIoaJH6yN2hQ332621Zs713U5-YkL3sUjCu1bR-41X7caiIBS_C)
 
 #### SchedulerJobServiceImpl.java
@@ -445,6 +447,7 @@ public class SchedulerCreateController {
 #### 对Job实例的其他操作
 略
 
+
 ## Client 端示例代码
 
 #### SchedulerJob.java
@@ -466,8 +469,6 @@ public abstract class SchedulerJob {
 
 }
 ```
-
-
 
 #### Jdbc.java
 
@@ -537,12 +538,14 @@ public class JdbcJobCreateController {
 }
 ```
 
+
 ## 将执行结果输入到日志中
 
 
 
 ## 数据库表的结构
-参考：[Quartz 存储与持久化 - 基于 quartz.properties 的配置](http://blog.csdn.net/evankaka/article/details/45540885)
+> 参考：[Quartz 存储与持久化 - 基于 quartz.properties 的配置](http://blog.csdn.net/evankaka/article/details/45540885)
+
 
 ## FAQ
 
