--- a/_posts/2017-02-20-Git的学习.md
+++ b/_posts/2017-02-20-Git的学习.md
@@ -9,6 +9,7 @@ tags : [Git]
 # Git 的学习
 ---
 
-> 参考官网教程：[Pro Git book ](https://git-scm.com/book/zh/v2)
+> [Pro Git book ](https://git-scm.com/book/zh/v2)  
+> [Git 参考手册](http://gitref.org/zh/index.html)
 
 <!--break-->
