--- a/_posts/2017-01-02-JavaEE基础学习.md
+++ b/_posts/2017-01-02-JavaEE基础学习.md
@@ -96,6 +96,7 @@ Java 常用正则表达式：
 
 ## 线程
 
+> [Future模式](https://www.cnblogs.com/uptownBoy/articles/1772483.html)
 > [Java 中的 Runnable、Callable、Future、FutureTask 的区别与示例](http://blog.csdn.net/bboyfeiyu/article/details/24851847)
 
 ```
