--- a/_posts/2017-01-02-JavaEE基础学习.md
+++ b/_posts/2017-01-02-JavaEE基础学习.md
@@ -34,6 +34,8 @@ https://docs.oracle.com/javase/8/docs/api/
 
 ## 类
 
+> [java 静态方法之线程安全问题](https://www.cnblogs.com/LvLoveYuForever/p/6077148.html)
+
 
 ## 抽象类
 
