--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -290,6 +290,8 @@ compile("org.quartz-scheduler:quartz:2.2.3")
 #### SchedulerJob.java
 
 ```
+import org.springframework.scheduling.quartz.QuartzJobBean;
+
 @Getter
 @Setter
 public abstract class SchedulerJob extends QuartzJobBean implements java.io.Serializable {
@@ -302,7 +304,7 @@ public abstract class SchedulerJob extends QuartzJobBean implements java.io.Seri
 
     String cron;
 
-    JobDataMap jobDataMap;
+    Map jobDataMap;
 
     public abstract void log();
 
@@ -450,23 +452,51 @@ public class SchedulerCreateController {
 
 ## Client 端示例代码
 
+#### ValueObject.java
+
+```
+public interface ValueObject<T> extends Serializable {
+
+    /**
+     * Value objects compare by the values of their attributes, they don't have an identity.
+     *
+     * @param other The other value object.
+     * @return <code>true</code> if the given value object's and this value object's attributes are the same.
+     */
+    boolean sameValueAs(T other);
+
+}
+```
+
+#### Jobable.java
+
+```
+public interface Jobable {
+
+    SchedulerJob convertToScheduler();
+}
+```
+
 #### SchedulerJob.java
 
 ```
-@Getter
-@Setter
-public abstract class SchedulerJob {
+@Data
+public class SchedulerJob implements ValueObject<SchedulerJob> {
 
-    String identify;
+    protected String identify;
 
-    String group;
+    protected String group;
 
-    String description;
+    protected String cron;
 
-    String cron;
+    protected String description;
 
-    JobDataMap jobDataMap;
+    protected Map<String, String> jobDataMap = new HashMap<>();
 
+    @Override
+    public boolean sameValueAs(final SchedulerJob other) {
+        return this.equals(other);
+    }
 }
 ```
 
@@ -487,6 +517,15 @@ public class Jdbc extends SchedulerJob {
 
     public String sql;
 
+    @Override
+    public SchedulerJob convertToScheduler() {
+        SchedulerJob job = new SchedulerJob();
+        job.setIdentify("jdbc" + new Random().nextInt());
+        job.setGroup("jdbcs");
+        job.setDescription("j...d...b...c");
+        job.setCron("0 */1 * * * ? *");
+        return job;
+    }
 }
 ```
 
@@ -520,12 +559,8 @@ public class JdbcJobCreateController {
 
     @RequestMapping(value = "/addJdbc")
     public ResponseEntity addJob() {
-        SchedulerJob jdbcJob = new Jdbc();
-        jdbcJob.setIdentify("jdbc" + new Random().nextInt());
-        jdbcJob.setGroup("jdbcs");
-        jdbcJob.setDescription("j...d...b...c");
-        jdbcJob.setCron("0 */1 * * * ? *");
-        JobDataMap jobDataMap = new JobDataMap();
+        SchedulerJob jdbcJob = new Jdbc().convertToScheduler();
+        Map<String, String> jobDataMap = new HashMap<>();
         jobDataMap.put("url", "jdbc:mysql://localhost:3306/quartz_scheduler");
         jobDataMap.put("username", "root");
         jobDataMap.put("password", "");
