--- a/_posts/2017-01-02-JavaEE基础学习.md
+++ b/_posts/2017-01-02-JavaEE基础学习.md
@@ -77,6 +77,29 @@ http://lvwenwen.iteye.com/blog/1906683
 
 Java 常用正则表达式：
 
+1. URL
+```
+"^(http|https|ftp)\\://([a-zA-Z0-9\\.\\-]+(\\:[a-zA-"
+                + "Z0-9\\.&%\\$\\-]+)*@)?((25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{"
+                + "2}|[1-9]{1}[0-9]{1}|[1-9])\\.(25[0-5]|2[0-4][0-9]|[0-1]{1}"
+                + "[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\\.(25[0-5]|2[0-4][0-9]|"
+                + "[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\\.(25[0-5]|2[0-"
+                + "4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[0-9])|([a-zA-Z0"
+                + "-9\\-]+\\.)*[a-zA-Z0-9\\-]+\\.[a-zA-Z]{2,4})(\\:[0-9]+)?(/"
+                + "[^/][a-zA-Z0-9\\.\\,\\?\\'\\\\/\\+&%\\$\\=~_\\-@]*)*$"
+```
+
+* 域名
+```
+
+```
+
+* 域名（不带 http/https）
+```
+"[^//]*?\\.(com|cn|net|org|biz|info|cc|tv)"
+```
+
+
 
 
 ## ClassLoader
