--- a/_posts/2017-02-20-Git的学习和使用.md
+++ b/_posts/2017-02-20-Git的学习和使用.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Git 的学习
+title: Git 的学习和使用
 category : [JavaEE]
 tagline: "Supporting tagline"
 tags : [Git]
 ---
 {% include JB/setup %}
-# Git 的学习
+# Git 的学习和使用
 ---
 
 > 参考官网教程：[Pro Git book ](https://git-scm.com/book/zh/v2)
