--- a/_posts/linux_shell/2015-12-02-Shell.md
+++ b/_posts/linux_shell/2015-12-02-Shell.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Shell 的学习
+title: Linux 的学习
 category : [系统运维]
 tagline: "Supporting tagline"
-tags : [Shell]
+tags : [Linux]
 ---
 {% include JB/setup %}
-# Shell 的学习
+# Linux 的学习
 ---
 
 
