--- a/_posts/2017-04-16-AJAX循环调用.md
+++ b/_posts/2017-04-16-AJAX循环调用.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: 循环发送 AJAX 请求
+title: 循环调用 AJAX 请求
 category : [学习问题记录]
 tagline: "Supporting tagline"
 tags : [AJAX]
 ---
 {% include JB/setup %}
-# 循环发送 AJAX 请求
+# 循环调用 AJAX 请求
 ---
 
 在页面循环发送ajax请求时，不能直接使用循环就去请求，这样会造成很多的问题。
