--- a/_posts/2017-05-11-Docker的学习和使用.md
+++ b/_posts/2017-05-11-Docker的学习和使用.md
@@ -243,9 +243,24 @@ $ sudo docker run -t -i ubuntu:16.04 /bin/bash
 • 从宿主主机配置的网桥接口中桥接一个虚拟接口到容器中去
 • 从地址池配置一个 ip 地址给容器
 • 执行用户指定的应用程序
-• 执行完毕后容器被终止 
+• 执行完毕后容器被终止  
+
+-h 选项制定主机名,如果不指定 Docker 会随机分配一个字符串做主机名. 
+``` 
+$ sudo docker run -h container -it ubuntu:16.04 /bin/bash
+root@container:/#  
+
+ 
+$ sudo docker run -it ubuntu:16.04 /bin/bash 
+root@efa9b7b0a527:/# 
+```
 
 #### 守护态运行 
+
+> Docker 采用了 C/S架构,包括客户端和服务端。 Docker daemon 作为服务端接受来自客户的请求,并处理这些请求(创建、运行、分发容器)。 客户端和服务端既可以运行在一个机器上,也可通过 socket 或者 RESTfulAPI 来进行通信。
+>   
+> - Docker daemon 一般在宿主主机后台运行,等待接收来自客户端的消息。
+> - Docker 客户端则为用户提供一系列可执行命令,用户用这些命令实现跟 Docker daemon 交互。 
 
 要让 Docker 容器在后台以守护态 (Daemonized) 形式运行。此时,可以通过添加 -d 参数来实现. 
 
@@ -530,21 +545,11 @@ Dockerfile由一行行命令组成，支持以 # 开头的注释行。
 
 ```
 sudo docker build -t build_repo/first_image /tmp/docker_builder/ 
-```
-
-
-
-## 基本架构 
-
-Docker 采用了 C/S架构,包括客户端和服务端。 Docker daemon 作为服务端接受来自客户的请求,并处理这些请求(创建、运行、分发容器)。 客户端和服务端既可以运行在一个机器上,也可通过 socket 或者 RESTfulAPI 来进行通信。
-
-- Docker daemon 一般在宿主主机后台运行,等待接收来自客户端的消息。
-- Docker 客户端则为用户提供一系列可执行命令,用户用这些命令实现跟 Docker daemon 交互。
-
+``` 
 
 
 ## 命名空间 
-
+> [宋宝华 - Linux namespace - Docker 背后的故事](http://www.w2bc.com/article/221120) 
 
 
 ## 文件系统 
