--- a/_posts/2017-03-01-Quartz的学习和使用.md
+++ b/_posts/2017-03-01-Quartz的学习和使用.md
@@ -505,7 +505,7 @@ public class SchedulerJob implements ValueObject<SchedulerJob> {
 ```
 @Getter
 @Setter
-public class Jdbc extends SchedulerJob {
+public class Jdbc implements Jobable {
 
     public String url;
 
