--- a/_posts/2017-01-02-Java.md
+++ b/_posts/2017-01-02-Java.md
@@ -3,7 +3,7 @@ layout: post
 title: Java 编程语言学习
 category : [JavaEE]
 tagline: "Supporting tagline"
-tags : [Java 基础]
+tags : [Java]
 ---
 {% include JB/setup %}
 # Java 编程语言学习
@@ -16,6 +16,22 @@ https://docs.oracle.com/javase/8/docs/
 https://docs.oracle.com/javase/8/docs/api/
 
 <!--break-->
+
+## JDK 安装 
+-  JAVA_HOME 环境变量。它指向 jdk 的安装目录，Eclipse/NetBeans/Tomcat 等软件就是通过搜索 JAVA_HOME 变量来找到并使用安装好的 jdk。 
+ 
+-  CLASSPATH 环境变量。作用是指定类搜索路径，要使用已经编写好的类，前提当然是能够找到它们了，JVM 就是通过 CLASSPATH 来寻找类的. class 文件。我们需要把 jdk 安装目录下的 lib 子目录中的 dt.jar 和 tools.jar 设置到 CLASSPATH 中，当然，当前目录 “.” 也必须加入到该变量中。  
+
+-  PATH 环境变量。作用是指定命令搜索路径，在命令行下面执行命令如 javac 编译 java 程序时，它会到 PATH 变量所指定的路径中查找看是否能找到相应的命令程序。我们需要把 jdk 安装目录下的 bin 目录增加到现有的 PATH 变量中，bin 目录中包含经常要用到的可执行文件如 javac/java/javadoc 等待，设置好 PATH 变量后，就可以在任何目录下执行 javac/java 等工具了。  
+
+windows 下安装 jdk  
+``` 
+JAVA_HOME = "C:\Program Files\Java\jdk1.5.0" 
+
+classpath= ".;%JAVA_HOME%\lib;%JAVA_HOME%\lib\tools.jar" 
+
+path ="%JAVA_HOME%\bin;%JAVA_HOME%\jre\bin"  
+``` 
 
 ## 字符与字符串
 
@@ -81,7 +97,12 @@ http://lvwenwen.iteye.com/blog/1906683
 
 Java 常用正则表达式：
 
-1. URL
+- IP 
+``` 
+"([1-9]|[1-9]\\d|1\\d{2}|2[0-4]\\d|25[0-5])(\\.(\\d|[1-9]\\d|1\\d{2}|2[0-4]\\d|25[0-5])){3}" 
+```
+
+- URL
 ```
 "^(http|https|ftp)\\://([a-zA-Z0-9\\.\\-]+(\\:[a-zA-"
                 + "Z0-9\\.&%\\$\\-]+)*@)?((25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{"
@@ -93,12 +114,12 @@ Java 常用正则表达式：
                 + "[^/][a-zA-Z0-9\\.\\,\\?\\'\\\\/\\+&%\\$\\=~_\\-@]*)*$"
 ```
 
-* 域名
+- 域名
 ```
 
 ```
 
-* 域名（不带 http/https）
+- 域名（不带 http/https）
 ```
 "[^//]*?\\.(com|cn|net|org|biz|info|cc|tv)"
 ```
