--- a/_posts/2016-11-28-Git使用问题记录.md
+++ b/_posts/2016-11-28-Git使用问题记录.md
@@ -1,13 +1,17 @@
 ---
 layout: post
-title: Git 更新提示 “Already up-to-date”
+title: Git 使用问题记录”
 category : [学习问题记录]
 tagline: "Supporting tagline"
 tags : [Git]
 ---
 {% include JB/setup %}
-# Git 更新提示 “Already up-to-date”
----
+# Git 使用问题记录
+--- 
+
+<!--break-->  
+
+1. Already up-to-date 
 
 在使用 git 的过程中由于误操作，导致从本地 master 分支 merge 代码到当前分支失败，虽然当前分支和 master 分支代码不同步，但是仍然提示 `Already up-to-date`。
 
@@ -26,4 +30,12 @@ git push origin <branch> --force
 `<version>` ：表示将要回滚到的当前分支的历史版本号。  
 `<branch>` ：表示当前的本地分支名称。
 
-<!--break-->
+
+2. Revision not found in 
+
+从 master 分支上切分支,提示: 
+``` 
+Couldn't checkout feature-xx  
+Revision not found in 项目名称 
+```
+
