--- a/_posts/2017-08-08-页面表单验证.md
+++ b/_posts/2017-08-08-页面表单验证.md
@@ -1,4 +1,12 @@
-## 表单验证
+---
+layout: post
+title: 页面表单验证
+category : [学习问题记录]
+tagline: "Supporting tagline"
+tags : [Spring MVC]
+---
+{% include JB/setup %}
+# 页面表单验证
 
 > [spring mvc 中使用 spring 的 validator](http://blog.csdn.net/shuwei003/article/details/7213662)    
 >
