--- a/_posts/java/2017-01-02-Java.md
+++ b/_posts/java/2017-01-02-Java.md
@@ -17,14 +17,19 @@ https://docs.oracle.com/javase/8/docs/api/
 
 <!--break-->
 
-## JDK 安装 
+## JDK 的安装 
+> JRE（Java Runtime Environment）：是 java 运行时环境，包含了 java 虚拟机和 java 基础类库，是使用 java 语言编写的程序运行所需要的软件环境，是提供给想运行 java 程序的用户使用的。
+  JDK（Java Development Kit）：是 java 开发工具包，是程序员使用 java 语言编写 java 程序所需的开发工具包，是提供给程序员使用的。
+  JDK 包含了 JRE，同时还包含了编译 java 源码的编译器 javac（java compiler），还包含了很多 java 程序调试和分析的工具：jconsole，jvisualvm 等工具软件，还包含了 java 程序编写所需的文档和 demo 例子程序。如果你需要运行 java 程序，只需安装 JRE 就可以了。如果你需要编写 java 程序，需要安装 JDK。
+  JRE 根据不同操作系统（如：windows，linux 等）和不同 JRE 提供商（IBM,ORACLE 等）有很多版本，最常用的是 Oracle 公司收购 SUN 公司的 JRE 版本。 
+  
 -  JAVA_HOME 环境变量。它指向 jdk 的安装目录，Eclipse/NetBeans/Tomcat 等软件就是通过搜索 JAVA_HOME 变量来找到并使用安装好的 jdk。 
  
 -  CLASSPATH 环境变量。作用是指定类搜索路径，要使用已经编写好的类，前提当然是能够找到它们了，JVM 就是通过 CLASSPATH 来寻找类的. class 文件。我们需要把 jdk 安装目录下的 lib 子目录中的 dt.jar 和 tools.jar 设置到 CLASSPATH 中，当然，当前目录 “.” 也必须加入到该变量中。  
 
 -  PATH 环境变量。作用是指定命令搜索路径，在命令行下面执行命令如 javac 编译 java 程序时，它会到 PATH 变量所指定的路径中查找看是否能找到相应的命令程序。我们需要把 jdk 安装目录下的 bin 目录增加到现有的 PATH 变量中，bin 目录中包含经常要用到的可执行文件如 javac/java/javadoc 等待，设置好 PATH 变量后，就可以在任何目录下执行 javac/java 等工具了。  
 
-windows 下安装 jdk  
+Windows 下安装 jdk  
 ``` 
 JAVA_HOME = "C:\Program Files\Java\jdk1.5.0" 
 
@@ -32,6 +37,9 @@ classpath= ".;%JAVA_HOME%\lib;%JAVA_HOME%\lib\tools.jar"
 
 path ="%JAVA_HOME%\bin;%JAVA_HOME%\jre\bin"  
 ``` 
+
+Linux 下安装 jdk 
+
 
 ## 字符与字符串
 
