--- a/_posts/java/2017-08-14-Java工具类的定义.md
+++ b/_posts/java/2017-08-14-Java工具类的定义.md
@@ -9,7 +9,8 @@ tags : [Java]
 # Java 工具类的定义
 ---
 
-1. 只定义静态(static)字段.
-2. 方法全部定义为 static.
-3. 构造方法私有化(private).
-4. 类定义为 abstract, 或者在构造方法中抛出异常,这样做是防止利用反射初始化工具类.
+1. 类定义为 abstract  
+> 如果不这样可以将构造方法私有化(private)或者在构造方法中抛出异常,这样做是防止利用反射初始化工具类.
+> 这样做都是为了不让调用者创建该工具类对象.
+2. 只定义静态(static)字段.
+3. 方法全部定义为 static.
