--- a/archives/2017-05-11-Docker的学习和使用.md
+++ b/archives/2017-05-11-Docker的学习和使用.md
@@ -1,12 +1,4 @@
----
-layout: post
-title: Docker 的学习和使用
-category : [JavaEE]
-tagline: "Supporting tagline"
-tags : [Docker]
----
-{% include JB/setup %}
-# Docker 的学习和使用 
+的学习和使用 
 ---
 
 ## Docker 的安装 (Ubuntu) 
