--- a/_posts/spring/2017-01-10-Spring的学习和使用.md
+++ b/_posts/spring/2017-01-10-Spring的学习和使用.md
@@ -114,6 +114,104 @@ public class CDPlayerConfig {}
 但是,很多对象会依赖其他的对象才能完成任务.这样的话,我们就需要有一种方法能够将组件扫描得到的 bean 
 和它们的依赖装配在一起.要完成这项任务,我们需要了解一下 Spring 自动装配的另外一方面内容 -- 自动装配.  
 
-### 2.2.4 通过为 Bean 添加注解实现自动装配   
+### 2.2.4 通过为 Bean 添加注解实现自动装配  
+简单来说,自动装配就是让 Spring 自动满足 Bean 依赖的一种方法,在满足依赖的过程中,会在 Spring 应用上下文中
+寻找匹配某个 Bean 需求的其他 Bean.为了声明要进行自动装配,我们可以借助 Spring 的 @Autowired 注解. 
+
+比方说,下面的 CDPlayer 类,它的构造上添加了 @Autowired 注解,这表明当 Spring 创建 CDPlayer Bean
+的时候,会通过这个构造器来进行实例化并且会传入一个可设置给 CompactDisc 类型的 Bean.   
+
+``` 
+# 通过自动装配,将一个 CompactDisc 注入到 CDPlayer 之中     
+  
+package soundsystem ;
+import.org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+
+@Component
+public class CDPlayer implements MediaPlayer {
+    private CompactDisc cd;
+    
+    @Autowired
+    public CDPlayer(CompactDisc cd) {
+        this.cd = cd; 
+    } 
+    
+    public void play() {
+        cd.play();
+    }
+}
+``` 
+@Autowired 注解不仅能够用在构造器上,还能用在属性的 Setter 方法上,比如说,CDPlayer 有一个 setCompactDisc() 
+方法,那么可以采用如下的注解形式进行自动装配: 
+``` 
+@Autowired
+public void setCompactDisc(CompactDisc cd) {
+    this.cd = cd;
+}
+```  
+
+在 Spring 初始化 Bean 之后,它会尽可能的去满足 Bean 的依赖,在本例中,依赖是通过带有 @Autowired 注解
+的方法进行声明的,也就是 setCompactDisc() 方法.   
+
+实际上, Setter 方法并没有什么特殊之处,@Autowired 注解可以用在类的任何方法上.假设 CDPlayer 类有一个 
+insertDisc() 方法,那么 @Autowired 能够像在 setCompactDisc() 上那样,发挥完全相同的作用: 
+``` 
+@Autowired
+public void insertDisc(CompactDisc cd) {
+    this.cd = cd;
+}
+```    
+
+不管是构造器,Setter 方法还是其他的方法,Spring 都会尝试满足方法参数上所声明的依赖.假如有且只有一个 Bean 
+匹配依赖需求的话,那么这个 Bean 将会被装配进来.   
+
+如果没有匹配的 Bean,那么在应用上下文创建的时候,Spring 会抛出一个异常.为避免异常的出现,你可以将 @Autowired 
+的 required 属性设置为 false: 
+``` 
+@Autowired(required=false)
+public CDPlayer(CompactDisc cd) {
+    this.cd = cd;
+}
+```  
+
+> Xml配置中的 Bean 要顺序定义.   
+
+将 required 属性设置为 false 时,Spring 会尝试执行自动装配,但是如果没有匹配的 Bean 的话,Spring 
+将会让这个 Bean 处于未装配的状态.但是,把 required 属性设置为 false 时,你需要谨慎对待.如果在你的代码
+种没有进行 null 检查的话,这个处于未装配状态的属性有可能会出现 NullPointerException.    
+
+如果有多个 Bean 都能满足依赖关系的话,Spring 将会抛出一个异常,表明没有明确指定要选择哪个 Bean 进行自动装配.   
+
+@Autowired 注解是 Spring 特有的注解,如果你不愿意在代码中到处使用 Spring 的特定注解来完成自动装配
+任务的话,那么你可以考虑将其替换为 @Inject: 
+``` 
+package soundsystem;
+import javax.inject.Inject;
+import javax.inject.Named;
+
+@Named
+public class CDPlayer {
+    ... 
+    
+    @Inject
+    public CDPlayer(CompactDisc cd) {
+        this.cd = cd;
+    }
+}
+```    
+
+@Inject 注解来源于 Java 依赖注入规范,该规范同时还为我们定义了 @Named 注解.在自动装配中,Spring 同时支持 
+@Inject 和 @Autowired.尽管 @Inject 和 @Autowired 之间有着一些细微的差别,但是在大多数场景下,它们都是
+可以互相替换的.    
+
+### 2.2.5 验证自动装配    
+现在,我们已经在 CDPlayer 的构造器中添加了 @Autowired 注解,Spring 将把一个可分配给 CompactDisc 类型的 
+Bean 自动注入进来.    
+ 
+## 2.3 通过 Java 代码装配 Bean    
+
+ 
+
 
 
