--- a/_posts/spring/2017-01-10-Spring的学习和使用.md
+++ b/_posts/spring/2017-01-10-Spring的学习和使用.md
@@ -12,16 +12,17 @@ tags : [Spring]
 <!--break-->
 
 
-## 2 装配 Bean 
-### 2.1 Spring 配置的可选方案 
+# 2 装配 Bean 
+
+## 2.1 Spring 配置的可选方案 
 Spring 容器负责创建应用程序中的 Bean 并通过 DI 来协调这些对象之间的关系.
 但是,作为开发人员,你需要告诉 Sprng 要创建哪些 Bean 并且如何将其装配在一起.
 当描述 Bean 如何进行装配时,Spring 具有非常大的灵活性,它提供了三种主要的装配机制: 
-- 在 XML 种进行显示配置 
-- 使用 JavaConfig 进行配置 
-- 隐式的 Bean 发现机制与自动装配 
+- 自动化装配
+- 基于 Java 的显式配置
+- 基于 XML 的显式配置
 
-### 2.2 自动化装配 Bean 
+## 2.2 自动化装配 Bean 
 Spring 从两个角度来实现自动化装配: 
 - 组建扫描(component scanning): Spring 会自动发现应用上下文中所创建的 Bean. 
 - 自动装配(autowiring): Spring 自动满足 Bean 之间的依赖. 
@@ -124,10 +125,11 @@ public class CDPlayerConfig {}
 ``` 
 # 通过自动装配,将一个 CompactDisc 注入到 CDPlayer 之中     
   
-package soundsystem ;
+package soundsystems;
+ 
 import.org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-
+ 
 @Component
 public class CDPlayer implements MediaPlayer {
     private CompactDisc cd;
@@ -187,9 +189,10 @@ public CDPlayer(CompactDisc cd) {
 任务的话,那么你可以考虑将其替换为 @Inject: 
 ``` 
 package soundsystem;
+ 
 import javax.inject.Inject;
 import javax.inject.Named;
-
+ 
 @Named
 public class CDPlayer {
     ... 
@@ -210,8 +213,182 @@ public class CDPlayer {
 Bean 自动注入进来.    
  
 ## 2.3 通过 Java 代码装配 Bean    
+尽管在很多场景下通过组件扫描和自动装配实现 Spring 的自动化配置是更为推荐的方式,但有时候自动化配置的方案行不通,
+因此需要明确配置 Spring.比如说,你想要将第三方库中的组件装配到你的应用中,在这种情况下,是没有办法在它的类添加 
+@Component 和 @Autowired 注解的,因此就不能使用自动化装配的方案了.   
 
+在这种情况下,必须要采用显式装配的方式.在进行显式装配的时候,又两种可选方案: Java 和 XML.相比 XML 配置方式,
+JavaConfig 是更好的方案,因为它更为强大,类型安全并且对重构友好.因为它就是 Java 代码,就像应用程序中其他 Java 
+代码一样.   
+
+同时,JavaConfig 与其他 Java 代码又有所区别.在概念上,它与应用程序中的业务逻辑和领域代码是不同的.尽管它与其他
+的组件一样都使用相同的语言进行表述,但 JavaConfig 是配置代码.这意味着它不应该包含任何业务逻辑,JavaConfig 
+也不应该侵入到业务逻辑代码之中.尽管不是必须的,但通常会将 JavaConfig 放到单独的包中,使它与其他的应用程序逻辑
+分开来,这样对于它的意图就不会产生困惑了.   
+
+### 2.3.1 创建配置类   
+``` 
+package soundsystems;
+import org.springframeword.context.annotation.Configuration;
+
+@Configuration
+public class CDPlayerConfig {
+
+}
+```
+创建 JavaConfig 类的关键在于为其添加 @Configuration 注解,@Configuration 注解表明这个类是一个配置类.   
+
+### 2.3.2 声明简单的 Bean 
+要在 JavaConfig 中声明 Bean,我们需要编写一个方法,这个方法会创建所需类型的实例,然后给这个方法添加 @Bean 
+注解.比方说,下面的代码声明了 CompactDisc Bean: 
+```  
+@Bean 
+public CompactDisc sgtPeppers() {
+    return new SgtPeppers();
+}
+``` 
+@Bean 注解会告诉 Spring 这个方法将会返回一个对象,该对象要注册为 Spring 应用上下文中的 Bean.方法体中
+包含了最终产生 Bean 实例的逻辑.  
+
+默认情况下, Bean 的 ID 与带有 @Bean 注解的方法名是一样的.在本例中, Bean 的名字将会是 sgtPeppers.
+如果你想为其设置成一个不同的名字的话,那么可以重命名该方法,也可以通过 name 属性指定一个不同的名字: 
+``` 
+@Bean(name="lonelyHeartsClubBand") 
+public CompactDisc sgtPeppers() {
+    return new SgtPeppers();
+}
+```
+不管你采用什么方法来为 Bean 命名,Bean 声明都是非常简单的.方法体返回了一个新的 SgtPeppers 实例.这里是使用
+Java 来jinxing描述的,因此我们可以发挥 Java 提供的所有功能,只要最终生成一个 CompactDisc 实例即可.  
+
+### 2.3.3 借助 JavaConfig 实现注入 
+前面所声明的 CompactDisc Bean 是非常简单的,它自身没有其他的依赖.但现在,我们需要声明 CDPlayer Bean,
+它依赖与 CompactDisc.在 JavaConfig 中,要如何将它们装配到一起呢?  
+
+在 JavaConfig 中装配 Bean 的最简单方式就是创建 Bean 的方法.例如,下面就是一种声明 CDPlayer 的可行方案: 
+``` 
+@Bean
+public CDPlayer cdPlayer() {
+    return new CDPlayer(sgtPeppers());
+}
+``` 
+cdPlayer() 方法像 sgtPeppers() 方法一样,同样使用了 @Bean 注解,这表明这个方法会创建一个 Bean 实例并将其
+注册到 Spring 应用上下文中.所创建的 Bean ID 为 cdPlayer,与方法的名字相同.  
+
+cdPlayer() 的方法体与 sgtPeppers() 稍微有些区别.在这里并没有使用默认的构造器构建实例,而是调用了需要传入
+CompactDisc 对象的构造器来创建 CDPlayer 实例.   
+
+看起来,CompactDisc 是通过调用 sgtPeppers() 得到的,但情况并非完全如此,因为 sgtPeppers() 方法上
+添加了 @Bean 注解,Spring 将会拦截所有对它的调用,并确保直接返回该方法所创建的 Bean,而不是每次都对其
+进行实际的调用.  
+
+还有一种理解起来更为简单的方式: 
+``` 
+@Bean 
+public CDPlayer cdPlayer(CompactDisc compactDisc) {
+    return new CDPlayer(compactDisc);
+}
+```
+
+在这里,cdPlayer() 方法请求一个 CompactDisc 作为参数.当 Spring 调用 cdPlayer()  创建 CDPlayer bean 
+的时候,它会自动装配一个 CompactDisc 到配置中.然后,方法体就可以按照合适的方式来使用它.借助这种技术,cdPlayer()
+方法也能够将 CompactDisc 注入到 CDPlayer 的构造器中,而且不用明确引用 Compact:Disc 的 @Bean 方法.   
+
+通过这种方式引用其他的 Bean 通常是最佳的选择,因为它不会要求将 compactDisc 声明到同一个配置类之中.在这里
+甚至没有要求 CompactDisc 必须要在 JavaConfig 中声明,实际上它可以通过组件扫描功能自动发现或者通过 XML 来
+进行配置..不管 CompactDisc 是采用什么方式创建出来的, Spring 都会将其注入到配置方法中.   
+
+## 2.4 通过 XML 装配 Bean   
+
+
+
+## 2.5 导入和混合配置 
+
+
+
+
+# 高级装配 
+本章内容: 
+- Spring profile 
+- 条件化的 Bean 声明 
+- 自动装配与歧义性 
+- Bean 的作用域 
+- Spring 表达式语言 
+
+## 3.1 环境与 Profile  
+
+### 3.1.1 配置 Profile Bean 
+Spring 为环境相关的 Bean 所提供的解决方案其实与构建时的方案没有太大差别.当然,在这个过程中需要根据环境决定该
+创建哪个 Bean 和不创建哪个 Bean.不过 Spring 并不是在构建的时候做出这样的决策,而是等到运行时再来确定.这样的
+结果就是同一个部署单元(可能会是 WAR 文件)能够适用于所有的环境,没有必要进行重新构建.   
+
+在 Java 配置中,可以使用 @Profile 注解指定某一个 Bean 或者方法属于哪一个 profile,例如,在配置类中,
+嵌入数据库的 DataSource 可能会配置成如下所示: 
+
+``` 
+@Configuration
+@Profile("dev")
+public class DevelopmentProfileConfig {
+    @Bean(destroyMethod="shutdown")
+    public DataSource dataSource() {
+        return new EmbeddedDatabaseBuilder() {}
+                .setType(EmbeddedDatabaseType.H2)
+                .addScript("classpath:schema.sql")
+                .addScript("classpath:test-data.sql")
+                .build();
+    }
+}
+```
+它会告诉 Spring 这个类或者方法只有在 dev profile 激活时才会创建.如果 dev profile 没有激活的话,那么带有
+@Bean 注解的方法都会被忽略掉.  
+  
+在 Spring3.1 中,只能在类级别上使用 @Profile 注解.不过,从 Spring3.2 开始,你也可以在方法级别上使用 @Profile 
+注解,与 @Bean 注解一同使用.这样的话,就能将这两个 Bean 的声明放到同一个配置类之中:  
+``` 
+@Configuration
+public class DataSourceConfig {
+    @Bean(destroyMethod="shutdown")
+    @Profile("dev")
+    public DataSource embeddedDataSource() {
+        return new EmbeddedDatabaseBuilder() {}
+                        .setType(EmbeddedDatabaseType.H2)
+                        .addScript("classpath:schema.sql")
+                        .addScript("classpath:test-data.sql")
+                        .build();
+    }
+    
+    @Bean
+    @Profile("prod")
+    public DataSource jndiDataSource() {
+        JndiObjectFactoryBean jndiObjectFactoryBean = new JndiObjectFactoryBean();
+        jndiObjectFactoryBean.setJndiName("jdbc/myDS");
+        jndiObjectFactoryBean.setResourceRef(true);
+        jndiObjectFactoryBean.setProxyInterface(javax.sql.DataSource.class);
+        return (DataSource)jndiObjectFactoryBean.getObject();
+    }
+}
+```
+这里有个问题需要注意,尽管每个 DataSource Bean 都被声明在一个 profile 中,并且只有当规定的 profile 
+激活时,相应的 Bean 才会被创建,但是可能会有其他的 Bean 并没有声明在一个给定的 profile 范围内.没有指定 
+profile 的 Bean 始终都会被创建,与激活哪个 profile 没有关系.   
+
+
+### 3.1.2 在 XML 中配置 profile 
  
+
+### 3.1.3 激活 profile 
+Spring 在确定哪个 profile 处于激活状态时,需要依赖两个独立的属性: 
+- spring.profiles.active
+- spring.profiles.default 
+如果设置了 spring.profiles.active 属性的话,那么它的值就会用来确定哪个 profile 是激活的.但如果没有
+设置 spring.profiles.active 属性的话,那 Spring 将会查找 spring.profiles.default 的值.如果都
+没有设置的话,那就没有激活的 profile,因此只会创建那些没有定义在 profile 中的 Bean.  
+
+## 3.2 条件化的 Bean 
+
+
+## 3.3 处理自动装配的歧义性 
+
 
 
 
