--- a/_posts/2017-04-16-AJAX循环调用.md
+++ b/_posts/2017-04-16-AJAX循环调用.md
@@ -3,7 +3,7 @@ layout: post
 title: 循环调用 AJAX 请求
 category : [学习问题记录]
 tagline: "Supporting tagline"
-tags : [AJAX]
+tags : [JS, AJAX]
 ---
 {% include JB/setup %}
 # 循环调用 AJAX 请求
