--- a/_posts/java/2017-01-04-Java动态代理.md
+++ b/_posts/java/2017-01-04-Java动态代理.md
@@ -3,7 +3,7 @@ layout: post
 title: Java 动态代理
 category : [JavaEE]
 tagline: "Supporting tagline"
-tags : [动态代理]
+tags : [Java, 动态代理]
 ---
 {% include JB/setup %}
 # Java 动态代理
