--- a/_posts/spring/2017-01-10-Spring的学习和使用.md
+++ b/_posts/spring/2017-01-10-Spring的学习和使用.md
@@ -388,7 +388,55 @@ Spring 在确定哪个 profile 处于激活状态时,需要依赖两个独立的
 
 
 ## 3.3 处理自动装配的歧义性 
+在第二章中,我们已经看到如何使用自动装配让 Spring 完全负责将 bean 引用注入到构造参数
+和属性中.自动装配能够提供很大的帮助,因为它会减少应用程序组件时所需要的显示配置的数量.   
 
+不过,仅有一个 bean 匹配所需的结果时,自动装配才是有效的.如果不仅有一个 bean 能够匹配
+结果的话,这种歧义性会阻碍 Spring 自动装配属性/构造器参数或方法参数.   
+
+以 @Component 注解为例,当多个类都实现了同一个类,并且都使用了 @Component 注解,在自动
+装配时,Spring 无法做出选择,此时会抛出 NoUniqueBeanDefinitionExeption.   
+
+Spring 提供了多种可选方案来解决歧义性问题.你可以将可选 bean 中的某一个设为首选(primary)
+的 bean,或者使用限定符(qualifier)来帮助 Spring 将可选的 bean 的范围缩小到只有一个 bean.   
+
+### 3.3.1 标示首选的 Bean 
+在声明 bean 的时候,通过将其中一个可选的 bean 设置为首选(primary)bean 能够避免自动装配
+时的歧义性.当遇到歧义性的时候,Spring 将会使用首选的 bean,而不是其他可选的 bean.实际上,
+你所声明就是"最喜欢"的 bean.  
+
+假设冰激凌就是你最喜欢的甜点.在 Spring 中,可以通过 @Primary 来表达最喜欢的方案.
+@Primary 能够与 @Component 组合用在组件扫描的 bean 上,也可以与 @Bean 组合用在
+Java 配置的 bean 声明中.比如,下面的代码展现了如何将 @Component 注解的 IceCream 
+bean 声明为首选的 bean:  
+``` 
+@Component
+@Primary
+public class IceCream implements Dessert {...} 
+``` 
+或者,如果你通过 Java 配置显式地声明 IceCream,那么 @Bean 方法应该如下所示: 
+```  
+@Bean 
+@Primary
+public Dessert iceCream() {
+    return new IceCream();
+}
+```
+如果你使用 XML 配置 bean 的话,同样可以实现这样的功能.<bean> 元素有一个 primary 属性
+用来指定首选的 bean: 
+```  
+<bean id="iceCream"
+      class="" 
+      primary="true" />
+```
+不管你采用什么方式来标示首选 bean,效果都是一样的,都是告诉 Spring 在遇到
+歧义性的时候要选择首选的 bean.    
+
+就像 Spring 无法从多个可选的 bean 中做出选择一样,它也无法从多个首选的 bean 中
+做出选择.显示,如果不止一个 bean 被设置成了首选 bean,那实际上也就是没有首选 bean 了.  
+
+
+### 3.3.2 限定自动装配的 bean 
 
 
 
